# gr4-studio

./: .env  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.dev.yml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.test.ts  vite.config.ts
blocks/: CMakeLists.txt  LICENSE  README.md
blocks/cmake/: PluginHelpers.cmake
blocks/studio/: CMakeLists.txt  README.md
blocks/studio/include/gnuradio-4.0/studio/: Studio2DSeriesSink.hpp  StudioAudioMonitor.hpp  StudioAudioSink.hpp  StudioDataSetSink.hpp  StudioImageSink.hpp  StudioPowerSpectrumSink.hpp  StudioSeriesSink.hpp  StudioWaterfallSink.hpp  StudioWebSocketTransport.hpp
blocks/studio/test/: CMakeLists.txt  qa_Studio2DSeriesSink.cpp  qa_StudioAudioSink.cpp  qa_StudioPowerSpectrumSink.cpp  qa_StudioSeriesSink.cpp  qa_StudioWaterfallSink.cpp
desktop/: app-server.mjs  app-server.test.mjs  main.mjs  preload.cjs  preload.mjs  remote-picker-preload.cjs  remote-picker-preload.mjs
docs/: studio-blocks-architecture.md  studio-blocks-payload-contracts.md  studio-websocket-integration.md
public/: audio-worklet-processor.js
scripts/: build.mjs  desktop-dev.mjs  install-desktop.mjs
src/: main.tsx  vite-env.d.ts
src/app/: routes.tsx  studio-page.tsx
src/components/: backend-pill.tsx  desktop-shell-bar.tsx  panel-header.tsx  status-badge.tsx  status-pill.tsx  studio-mark.tsx
src/features/application/: application-view.test.ts  application-view.tsx
src/features/application/audio/: audio-playback-controller.ts
src/features/application/audio/runtime/: audio-frame.test.ts  audio-frame.ts  audio-websocket-runtime.ts
src/features/application/plotting/adapters/: histogram-spectrum-uplot-adapter.tsx  plot-adapter-switch.tsx  (+9 more)
src/features/block-catalog/: block-catalog-panel.tsx  catalog-tree.test.ts  catalog-tree.ts
src/features/block-catalog/hooks/: use-block-catalog-query.ts
src/features/block-properties/: block-properties-modal.test.ts  block-properties-modal.tsx
src/features/control-panels/: control-panel-authoring.test.ts  control-panel-authoring.ts  control-panel-binding-resolution.test.ts  control-panel-binding-resolution.ts  control-panel-view.tsx
src/features/document-file/: document-persistence-capabilities.ts  document-persistence-service.test.ts  document-persistence-service.ts  document-serialization.ts  document-shortcuts.test.ts  document-shortcuts.ts  document-store.test.ts  document-store.ts  document-workflow-messaging.test.ts  document-workflow-messaging.ts  gr4c-download.test.ts  gr4c-download.ts  unsaved-changes-guard.test.ts  unsaved-changes-guard.ts  unsupported-browser-notice.test.ts  unsupported-browser-notice.ts
src/features/documentation/model/: doxygen.test.ts  doxygen.tsx
src/features/graph-document/model/: fromEditor.ts  schema-layout.test.ts  schema.ts  studio-layout.ts  studio-panels-roundtrip.test.ts  studio-workspace.ts  toEditor.ts  types.ts
src/features/graph-editor/: graph-editor-panel.tsx  graph-node.tsx
src/features/graph-editor/model/: clipboard.test.ts  clipboard.ts  node-execution.test.ts  node-execution.ts  node-rotation.test.ts  node-rotation.ts  nodeFactory.ts  presentation.test.ts  presentation.ts  types.ts
src/features/graph-editor/runtime/: http-time-series-popout.tsx  http-time-series.test.ts  http-time-series.ts  known-block-bindings.test.ts  known-block-bindings.ts  studio-managed-runtime-authoring.test.ts  studio-managed-runtime-authoring.ts
src/features/graph-editor/store/: editorStore.test.ts  editorStore.ts
src/features/graph-tabs/components/: graph-tabs-bar.tsx
src/features/graph-tabs/store/: graphTabsStore.test.ts  graphTabsStore.ts
src/features/inspector/: inspector-panel.tsx  runtime-settings-model.test.ts  runtime-settings-model.ts
src/features/inspector/hooks/: use-block-details-query.ts  use-runtime-block-settings.ts
src/features/ports/model/: resolveRenderedPorts.test.ts  resolveRenderedPorts.ts  typeColors.ts  types.ts
src/features/runtime-session/components/: global-sessions-drawer.tsx  graph-execution-overlay.tsx
src/features/runtime-session/model/: runtime-binding-resolution.test.ts  runtime-binding-resolution.ts
src/features/runtime-session/store/: runtimeSessionStore.test.ts  runtimeSessionStore.ts
src/features/runtime-submission/model/: current-graph-submission.test.ts  current-graph-submission.ts  toGrctrlPayload.test.ts  toGrctrlPayload.ts  types.ts
src/features/variables/: variables-view.tsx
src/features/variables/model/: expression.test.ts  expression.ts  resolveGraphVariables.test.ts  resolveGraphVariables.ts  types.ts  variable-binding.test.ts  variable-binding.ts
src/features/workspace/: plot-style-modal.tsx  workspace-view.tsx
src/features/workspace/model/: layout.test.ts  layout.ts  panel-derivation.test.ts  panel-derivation.ts  panel-merge.test.ts  panel-merge.ts  panel-titles.ts
src/features/workspace/renderers/: audio-live-renderer.tsx  histogram-live-renderer.tsx  live-renderer-contract.ts  panel-renderers.tsx  series-live-renderer-model.test.ts  series-live-renderer-model.ts  series-live-renderer.tsx  waterfall-live-renderer.tsx
src/lib/: config.ts  runtime-config.test.ts  runtime-config.ts
src/lib/api/: block-details.ts  block-settings.test.ts  block-settings.ts  blocks.ts  blocksApi.test.ts  blocksApi.ts  client.test.ts  client.ts  endpoint-routing.test.ts  endpoint-routing.ts  runtime-http-fetch.test.ts  runtime-http-fetch.ts  sessionsApi.ts  websocket-url.test.ts  websocket-url.ts
src/lib/dto/: block-details.ts  blocks.ts  sessions.ts
src/lib/utils/: parameter-groups.test.ts  parameter-groups.ts  ui-formatting.ts
src/styles/: index.css
(+22 files in other folders)
